fix chevron spacing

--- a/themes/sherpa/styles/_shapes.sass
+++ b/themes/sherpa/styles/_shapes.sass
@@ -16,8 +16,8 @@
   height: auto
   background: $bgColor
   padding: 3em 0
-  +breakpoint(large)
+  +breakpoint(medium)
     -webkit-clip-path: polygon(0 0, 50% 10%, 100% 0, 100% 90%, 50% 100%, 0 90%)
     clip-path: polygon(0 0, 50% 10%, 100% 0, 100% 90%, 50% 100%, 0 90%)
-    margin-bottom: -5%
-    padding:  15%
+    padding: 15%
+    margin-bottom: -10vh
